--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,20 +7,17 @@
 }
 
 :root {
-    --primary-color: #000000;
-    /* Black */
-    --secondary-color: #ffffff;
-    /* White */
-    --accent-color: #A100FF;
-    /* Pink */
-    --background-color: #f4f4f4;
-    /* Light grey */
+    --dark-color: #000000;
+    --white-color: #ffffff;
+    --purple-color: #A100FF;
     --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
 }
 
 .body {
     font-family: var(--font-family);
-    background-color: var(--background-color);
+    background-color: var(--dark-color);
+    color: var(--white-color);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -29,8 +26,8 @@
 .header {
     height: 50px;
     width: 100%;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
+    background: var(--purple-color);
+    color: var(--white-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -49,7 +46,7 @@
 }
 
 .menu>hr {
-    background-color: var(--secondary-color);
+    background-color: var(--white-color);
     border: none;
     margin: 2px 0;
     width: 20px;
@@ -57,8 +54,8 @@
 }
 
 .nav {
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
+    background-color: var(--dark-color);
+    color: var(--white-color);
 }
 
 .main {
@@ -68,8 +65,8 @@
 
 .footer {
     height: 50px;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
+    background-color: var(--purple-color);
+    color: var(--white-color);
     display: flex;
     align-items: center;
     justify-content: center;
